# rusvg-bbox

./: .gitignore  Cargo.toml  Dockerfile  makefile  request.json  request.txt  results-python.csv  results-rust.csv  results.txt
go-client/: .gitignore  bbox.proto  go.mod  go.sum  main.go  makefile  results.txt
go-client/internal/svgbbox/: bbox.pb.go  bbox_grpc.pb.go
src/csv-file/: main.rs
src/server/: main.rs
